# rscp

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  qr.rs  recv.rs  send.rs  server.rs  shutdown.rs  upload.html
