[package]
name = "rscp"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.3"
qrcode = { version = "0.12", default-features = false }
fs2 = "0.4.3"
actix-files = "0.6.5"
actix-web = "4.4.1"
futures-util = "0.3.30"
tokio = { version="1.35.1", features=["fs", "macros", "rt-multi-thread"]}
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.2"
indicatif = "0.17.7"
dunce = "1.0.4"
rand = "0.8.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
